--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,10 +1,9 @@
 <div class="background shadow-2 flex overflow-hidden">
-    <app-side-bar></app-side-bar>
-    <div class="bg-very-light-grey p3 flex-auto overflow-auto">
-        <h1 class="regular darkgray line-height-1 mb3">Energy consumption</h1>
-        <section class="mb3">
-            <button
-              class="
+  <app-side-bar></app-side-bar>
+  <div class="bg-very-light-grey p3 flex-auto overflow-auto">
+    <h1 class="regular darkgray line-height-1 mb3">Energy consumption</h1>
+    <section class="mb3">
+      <button class="
                 h5
                 inline-block
                 shadow-2
@@ -17,13 +16,18 @@
                 bg-blue
                 white
                 bold
-              "
-            >
-              Last 30 days
-            </button>
-          </section>
-          <section class="chartHeight mb3">
-            <app-chart [chartData]="chartData"></app-chart>
-          </section>
-    </div>
+              ">
+        Last 30 days
+      </button>
+    </section>
+    <section class="chartHeight mb3">
+      <app-chart [chartData]="chartData"></app-chart>
+    </section>
+    <section class="widget-container">
+      <ng-container *ngFor="let widget of widgets">
+        <app-data-widget [widgetConfiguration]="widget"></app-data-widget>
+      </ng-container>
+    </section>
+  </div>
+
 </div>
